--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "serve": "nodemon --exec babel-node server.js",
-    "seed:db": "babel-node jobs/seed_db.js"
+    "seed:db": "babel-node jobs/seed_db.js",
+    "start": "npm run build && node build/server.js",
+    "build": "rm -rf build/* && babel . --ignore node_modules --out-dir build"
   },
   "author": "Chris Wood",
   "license": "MIT",
@@ -21,14 +23,17 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.4",
     "multer": "^1.4.2",
+    "regenerator-runtime": "^0.13.5",
     "sharp": "^0.25.4",
     "stripe": "^8.47.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.10.1",
     "@babel/core": "^7.7.7",
     "@babel/node": "^7.7.7",
     "@babel/plugin-transform-runtime": "^7.7.6",
     "@babel/preset-env": "^7.7.7",
+    "babel-preset-es2015": "^6.24.1",
     "nodemon": "^2.0.2"
   }
 }
