--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
     "@babel/preset-env": "^7.7.7",
     "babel-preset-es2015": "^6.24.1",
     "nodemon": "^2.0.2"
+  },
+  "engines": {
+    "node": "14.4.0",
+    "npm": "6.14.5"
   }
 }
