--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "nodemon --exec babel-node server.js",
+    "serve": "nodemon --exec babel-node src/server.js",
     "seed:db": "babel-node jobs/seed_db.js",
     "start": "npm run build && node build/server.js",
-    "build": "rm -rf build/* && babel . --ignore node_modules --out-dir build"
+    "build": "rm -rf build/* && babel src --ignore node_modules --out-dir build"
   },
   "author": "Chris Wood",
   "license": "MIT",
