cors issue not actually problem; need to separate npm build/run scripts

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "serve": "nodemon --exec babel-node src/server.js",
     "seed:db": "babel-node jobs/seed_db.js",
-    "start": "npm run build && node build/server.js",
+    "start": "node build/server.js",
     "build": "rm -rf build/* && babel src --ignore node_modules --out-dir build"
   },
   "author": "Chris Wood",
