--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@babel/runtime": "^7.7.7",
     "apollo-server-express": "^2.9.15",
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
@@ -24,6 +25,7 @@
     "mongoose": "^5.8.4",
     "multer": "^1.4.2",
     "regenerator-runtime": "^0.13.5",
+    "rimraf": "^3.0.2",
     "sharp": "^0.25.4",
     "stripe": "^8.47.0"
   },
