--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "nodemon --exec babel-node src/server.js",
+    "serve": "nodemon --exec babel-node NODE_ENV=development src/server.js",
     "seed:db": "babel-node jobs/seed_db.js",
-    "start": "node build/server.js",
+    "start": "node NODE_ENV=production build/server.js",
     "build": "rm -rf build/* && babel src --ignore node_modules --out-dir build"
   },
   "author": "Chris Wood",
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.7.7",
+    "@sendgrid/mail": "^7.2.0",
     "apollo-server-express": "^2.9.15",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
