--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "nodemon --exec babel-node NODE_ENV=development src/server.js",
+    "serve": "NODE_ENV=development nodemon --exec babel-node src/server.js",
     "seed:db": "babel-node jobs/seed_db.js",
-    "start": "node NODE_ENV=production build/server.js",
+    "start": "NODE_ENV=production node build/server.js",
     "build": "rm -rf build/* && babel src --ignore node_modules --out-dir build"
   },
   "author": "Chris Wood",
@@ -20,6 +20,7 @@
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dayjs": "^1.8.28",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
