--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/runtime": "^7.7.7",
     "@sendgrid/mail": "^7.2.0",
     "apollo-server-express": "^2.9.15",
+    "aws-sdk": "^2.701.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
