--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "compress": "babel-node compress.js",
+    "worker:email": "babel-node src/workers/email.js",
+    "worker:delete-user": "babel-node src/workers/deleteUser.js",
     "serve": "NODE_ENV=development nodemon --exec babel-node src/server.js",
     "seed:db": "babel-node jobs/seed_db.js",
     "start": "NODE_ENV=production node build/server.js",
@@ -20,6 +22,7 @@
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "bull": "^3.15.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dayjs": "^1.8.28",
@@ -31,7 +34,8 @@
     "regenerator-runtime": "^0.13.5",
     "rimraf": "^3.0.2",
     "sharp": "^0.25.4",
-    "stripe": "^8.47.0"
+    "stripe": "^8.47.0",
+    "throng": "^4.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.1",
