--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "compress": "babel-node compress.js",
     "worker:tasks": "babel-node src/workers/tasks.js",
-    "serve": "NODE_ENV=development nodemon --exec babel-node src/server.js",
+    "serve": "cross-env NODE_ENV=development nodemon --exec babel-node src/server.js",
     "serve:no-reload": "NODE_ENV=development babel-node src/server.js",
     "seed:db": "babel-node jobs/seed_db.js",
-    "start": "NODE_ENV=production node build/server.js",
-    "build": "rm -rf build/* && babel src --ignore node_modules --out-dir build && mv index.html build"
+    "start": "cross-env NODE_ENV=production node build/server.js",
+    "build": "rimraf build/* && babel src --ignore node_modules --out-dir build && mv index.html build"
   },
   "author": "Chris Wood",
   "license": "MIT",
@@ -33,7 +33,6 @@
     "mongoose": "^5.8.4",
     "multer": "^1.4.2",
     "regenerator-runtime": "^0.13.5",
-    "rimraf": "^3.0.2",
     "sharp": "^0.25.4",
     "stripe": "^8.47.0",
     "throng": "^4.0.0"
@@ -45,7 +44,9 @@
     "@babel/plugin-transform-runtime": "^7.7.6",
     "@babel/preset-env": "^7.7.7",
     "babel-preset-es2015": "^6.24.1",
-    "nodemon": "^2.0.2"
+    "cross-env": "^7.0.3",
+    "nodemon": "^2.0.2",
+    "rimraf": "^3.0.2"
   },
   "engines": {
     "node": "14.4.0",
